# EasyHDR

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  WINDOWS_TESTING_REQUIRED.md  build.rs  deny.toml  prek.toml
.augment/rules/: rust-dev-guidelines.md
.cargo/: audit.toml
.claude/: rust-dev-guidelines.md
.github/workflows/: ci.yml  miri.yml  profiling.yml  release.yml  security.yml
EasyHDR/: config.json
benches/: config.rs  hdr_detection.rs  icon_cache.rs  process_monitor_bench.rs  uwp_detection.rs
docs/: performance_plan.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_config_json.rs  fuzz_process_name.rs  fuzz_windows_api.rs
proptest-regressions/config/: models.txt
scripts/: run_all_tests.ps1  run_all_tests.sh  verify_release_build.ps1
src/: error.rs  lib.rs  main.rs  test_utils.rs
src/config/: manager.rs  mod.rs  models.rs
src/controller/: app_controller.rs  mod.rs
src/gui/: gui_controller.rs  mod.rs  tray.rs
src/hdr/: controller.rs  mod.rs  version.rs  windows_api.rs
src/monitor/: hdr_state_monitor.rs  mod.rs  process_monitor.rs
src/utils/: autostart.rs  icon_cache.rs  icon_extractor.rs  logging.rs  memory_profiler.rs  mod.rs  single_instance.rs  startup_profiler.rs  update_checker.rs
src/uwp/: detector.rs  enumerator.rs  icon.rs  mod.rs
tests/: cpu_profiling_test.rs  cpu_usage_test.rs  dhat_profiling_test.rs  icon_cache_tests.rs  integration_tests.rs  memory_usage_test.rs  startup_time_test.rs  uwp_process_detection_tests.rs  version_detection_tests.rs
ui/: main.slint
