[package]
name = "easyhdr"
version = "0.1.0"
edition = "2021"
authors = ["EasyHDR Contributors"]
description = "Automatic HDR management for Windows"
license = "AGPL-3.0"

[lib]
name = "easyhdr"
path = "src/lib.rs"

[[bin]]
name = "easyhdr"
path = "src/main.rs"

[dependencies]
# GUI
slint = "1.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.18", features = ["v4", "serde"] }
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Concurrency
parking_lot = "0.12"

# Memory profiling
once_cell = "1.21"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }
winreg = "0.55"
tray-icon = "0.21"
rfd = "0.15"  # File dialogs
tauri-winrt-notification = "0.7"  # Windows toast notifications
image = { version = "0.25", default-features = false, features = ["ico"] }  # ICO decoding for tray icons

[build-dependencies]
slint-build = "1.13"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller binary

[profile.dev]
opt-level = 1       # Some optimization for dev builds
