[package]
name = "easyhdr"
version = "0.1.3"
edition = "2024"
rust-version = "1.85"
resolver = "2"
authors = ["engels74"]
description = "Automatic HDR management for Windows"
license = "AGPL-3.0-only"

[lib]
name = "easyhdr"
path = "src/lib.rs"

[[bin]]
name = "easyhdr"
path = "src/main.rs"

[dependencies]
# GUI
# Use Skia renderer for better font rendering quality on Windows
# The default FemtoVG renderer has poor font rasterization (see: https://github.com/slint-ui/slint/issues/6365)
slint = { version = "1.13", features = ["renderer-skia"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.18", features = ["v4", "serde"] }
thiserror = "2.0"
anyhow = "1.0"
semver = "1.0"

# HTTP client for update checking (blocking API, no async runtime needed)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Concurrency
parking_lot = "0.12"
smallvec = { version = "1.15.1", features = ["union"] }
rayon = "1.10"  # Parallel iterator processing for icon cache loading

# Image processing (for icon cache PNG encoding/decoding)
image = { version = "0.25", default-features = false, features = ["ico", "png"] }

# File system utilities (for atomic writes in icon cache)
tempfile = "3.23"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    # UWP application support
    "Win32_Storage_Packaging_Appx",  # GetPackageFullName API
    "Management_Deployment",          # PackageManager (WinRT)
    "ApplicationModel",               # Package types
    "ApplicationModel_Core",          # Core app model (AppListEntry)
    "Storage",                        # Package storage access
    "Storage_Streams",                # RandomAccessStreamReference, DataReader
    "Foundation",                     # Size type for GetLogo
] }
winreg = "0.55"
tray-icon = "0.21"
rfd = "0.15"  # File dialogs
tauri-winrt-notification = "0.7"  # Windows toast notifications
open = "5.3"  # Open URLs in default browser

[build-dependencies]
slint-build = "1.13"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dev-dependencies]
proptest = "1.8"
criterion = "0.7"

[[bench]]
name = "config"
harness = false

[[bench]]
name = "hdr_detection"
harness = false

[[bench]]
name = "icon_cache"
harness = false

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller binary

[profile.dev]
opt-level = 1       # Some optimization for dev builds

[profile.profiling]
inherits = "release"
debug = true        # Keep debug info for profiling
strip = false       # Don't strip symbols for profiling tools
# Build with: RUSTFLAGS="-C force-frame-pointers=yes" cargo build --profile profiling

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow specific pedantic lints that are too noisy or not applicable
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
